--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Juicer Barista</title>
 </head>
 <header>
-    <img src="/resources/images/juicerlogo.png" alt="">
+    <img src="/images/juicerlogo.png" alt="">
     <p>Lets make juices that are both delicious and nutrious</p>
 </header>
 <body>
     <div class="signup">
-        <img src="/resources/images/juicer.webp" alt="Juicer Barista Logo">
+        <img src="/images/juicer.webp" alt="Juicer Barista Logo">
         <form action="new-member">
             <legend>New Member Sign Up</legend>
                 <input type="text" id="fname" placeholder="First Name">
@@ -39,10 +39,10 @@
         </p>
     </div>
     <div class="juices">
-        <img src="/resources/images/redjuice.jpeg"alt="">
-        <img src="/resources/images/greenjuice.jpeg" alt="">
-        <img src="/resources/images/purplejuice.jpeg" alt="">
-        <img src="/resources/images/orangejuice.jpeg" alt="">
+        <img src="/images/redjuice.jpeg"alt="">
+        <img src="/images/greenjuice.jpeg" alt="">
+        <img src="/images/purplejuice.jpeg" alt="">
+        <img src="/images/orangejuice.jpeg" alt="">
     </div> 
 
     <p class="reason">Reasons To Juice!!</p>
@@ -87,7 +87,7 @@
         </p>
     </div>
     <footer>
-        <img src="/resources/images/juicerlogo.png" alt="">
+        <img src="/images/juicerlogo.png" alt="">
         <p> &copy; 2023 The Juicer Barista. </p>
         <p><strong>Privacy Policy & Terms of Use Membership Guidelines Sitemap</strong></p>
     </footer>
