--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="juices">
         <img src="/images/redjuice.jpeg"alt="">
-        <img src="/images/greenjuice.jpeg" alt="">
+        <img src="/images/greenjuice copy.png" alt="">
         <img src="/images/purplejuice.jpeg" alt="">
         <img src="/images/orangejuice.jpeg" alt="">
     </div> 
