removed the <br> in html file and add margin to the signup form attributes added alt comments

--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
     <title>Juicer Barista</title>
 </head>
 <header>
-    <img src="images/juicerlogo.png" alt="">
+    <img src="images/juicerlogo.png" alt="Juicer Barista Logo">
     <p>Lets make juices that are both delicious and nutrious</p>
 </header>
 <body>
     <div class="signup">
-        <img src="images/juicer.webp" alt="Juicer Barista Logo">
+        <img src="images/juicer.webp" alt="Juicer enjoying a drink">
         <form action="new-member">
             <legend>New Member Sign Up</legend>
                 <input type="text" id="fname" placeholder="First Name">
-                <br>
                 <input type="text" id="lname" placeholder="Last Name">
-                <br>
                 <input type="email" name="email" id="email" placeholder="Your@email.com">
-                <br>
                 <button type="submit">Join Now!</button>
         </form>
     </div>
@@ -39,10 +36,10 @@
         </p>
     </div>
     <div class="juices">
-        <img src="images/redjuice.jpeg"alt="">
-        <img src="images/greenjuice copy.png" alt="">
-        <img src="images/purplejuice.jpeg" alt="">
-        <img src="images/orangejuice.jpeg" alt="">
+        <img src="images/redjuice.jpeg"alt=" red juice">
+        <img src="images/greenjuice copy.png" alt="green juice">
+        <img src="images/purplejuice.jpeg" alt="purple juice">
+        <img src="images/orangejuice.jpeg" alt="orange juice">
     </div> 
 
     <p class="reason">Reasons To Juice!!</p>
@@ -87,7 +84,7 @@
         </p>
     </div>
     <footer>
-        <img src="images/juicerlogo.png" alt="">
+        <img src="images/juicerlogo.png" alt="Juicer Barista Logo">
         <p> &copy; 2023 The Juicer Barista. </p>
         <p><strong>Privacy Policy & Terms of Use Membership Guidelines Sitemap</strong></p>
     </footer>
