--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="signup">
         <img src="images/juicer.webp" alt="Juicer enjoying a drink">
-        <form action="new-member">
+        <form action="http://localhost:3005/submit" method="post">
             <legend>New Member Sign Up</legend>
                 <input type="text" id="fname" placeholder="First Name">
                 <input type="text" id="lname" placeholder="Last Name">
