--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img src="images/juicer.webp" alt="Juicer enjoying a drink">
         <form action="http://localhost:3005/submit" method="post">
             <legend>New Member Sign Up</legend>
-                <input type="text" id="fname" placeholder="First Name">
-                <input type="text" id="lname" placeholder="Last Name">
+                <input type="text" id="fname" name="firstname" placeholder="First Name">
+                <input type="text" id="lname" name="lastname" placeholder="Last Name">
                 <input type="email" name="email" id="email" placeholder="Your@email.com">
                 <button type="submit">Join Now!</button>
         </form>
